# cpp-rust-interop

./: CMakeLists.txt  README.md  build.sh
cpp2rust/: CMakeLists.txt
cpp2rust/lib/: lib.cpp
cpp2rust/rust/: Cargo.toml
cpp2rust/rust/src/: main.rs
mixed/: CMakeLists.txt
mixed/c_exe/: main.cpp
mixed/rust_lib/: Cargo.toml
mixed/rust_lib/src/: lib.rs
rust2cpp/: CMakeLists.txt
rust2cpp/lib/: CMakeLists.txt  Cargo.toml
rust2cpp/lib/src/: lib.rs
